--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "nodemon --watch ./src --exec 'babel src/index.js --out-file index.js'"
+    "tsc": "tsc",
+    "tslint": "tslint --force './src/*/**.ts'",
+    "build": "nodemon --watch ./src/ --ext ts --exec tsc"
+
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "nodemon": "^1.11.0",
+    "tslint": "^5.4.3",
+    "typescript": "^2.3.4",
     "webpack": "^2.4.1"
+  },
+  "dependencies": {
+    "aphrodite": "^1.2.0",
+    "requirejs": "^2.3.3"
   }
 }
