--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "module": "AMD",
     "target": "ES6",
-    "outFile": "index.js"
-  },
-  "include": [
-    "src/**/*"
-  ]
+    "allowJs": true
+  }
 }
