--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "tsc": "tsc",
     "tslint": "tslint --force './src/*/**.ts'",
-    "watch": "webpack --watch",
-    "build": "nodemon --watch ./src/ --ext ts --exec tsc"
+    "watch": "webpack-dev-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,19 +21,19 @@
   "homepage": "https://github.com/sundy001/css-storybook#readme",
   "devDependencies": {
     "babel": "^6.23.0",
-    "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "loglevel": "^1.4.1",
     "nodemon": "^1.11.0",
+    "ts-loader": "^2.2.1",
     "tslint": "^5.4.3",
     "typescript": "^2.4.1",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.6.0"
   },
   "dependencies": {
-    "aphrodite": "^1.2.1",
-    "parser": "^0.1.4",
-    "pixi.js": "^4.5.3",
-    "requirejs": "^2.3.3",
-    "ts-loader": "^2.2.1"
+    "babylon": "^6.17.4",
+    "marked": "^0.3.6",
+    "parser": "^0.1.4"
   }
 }
